tests/spec/emit/snapshots/let_binding_block_with_return_diverges.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn f() -> int {
    let x = {
      return 1
    }
    x
  }
  
  fn test() -> int {
    f()
  }
---
package main

func f() int {
	var x int
	{
		return 1
	}
	return x
}

func test() int {
	return f()
}
