tests/spec/emit/snapshots/let_binding_from_option_function.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn get_value() -> Option<int> {
    Some(42)
  }
  
  fn test() {
    let x = get_value();
  }
---
package main

func getValue() (int, bool) {
	return 42, true
}

func test() {
	getValue()
}
