tests/spec/emit/snapshots/let_binding_parenthesized_unit_call.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn noop() {}
  
  fn main() {
    let x = (noop())
    let _ = x
  }
---
package main

func noop() {}

func main() {
	noop()
}
