tests/spec/emit/snapshots/let_binding_shadows_go_builtin.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test(items: Slice<int>) -> int {
    let len = items.length();
    len
  }
---
package main

func test(items []int) int {
	len_ := len(items)
	return len_
}
