tests/spec/emit/snapshots/let_binding_shadows_go_predeclared_type.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:strconv"
  
  fn parse(s: string) -> Result<int, error> {
    let error = "context"
    let result = strconv.Atoi(s)
    match result {
      Ok(n) => Ok(n),
      Err(e) => Err(e),
    }
  }
---
package main

import "strconv"

func parse(s string) (int, error) {
	result, err := strconv.Atoi(s)
	if err == nil {
		return result, nil
	}
	return 0, err
}
