tests/spec/emit/snapshots/let_binding_with_result.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() {
    let x = Ok(42);
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	lisette.MakeResultOk[int, any](42)
}
