tests/spec/emit/snapshots/let_binds_call_returning_partial_alias.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type MyPartial = Partial<int, error>
  
  fn source() -> MyPartial {
    Partial.Ok(3)
  }
  
  fn main() {
    let a = source()
    let _ = a
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type MyPartial = lisette.Partial[int, error]

func source() (int, error) {
	return 3, nil
}

func main() {
	ret, ret_1 := source()
	var a lisette.Partial[int, error]
	if ret_1 != nil {
		a = lisette.MakePartialBoth[int, error](ret, ret_1)
	} else {
		a = lisette.MakePartialOk[int, error](ret)
	}
	_ = a
}
